update: make fixed and collapsable navbar but non-collapsable search bar

--- a/application/public/css/sticky-footer.css
+++ b/application/public/css/sticky-footer.css
@@ -24,7 +24,7 @@ body {
 /* Not required for template or sticky footer method. */
 
 body > .container {
-  padding: 30px 50px 130px;
+  padding: 10px 30px 120px;
 }
 
 .footer > .container {
